--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="./images/troll-face.png" />
     <link rel="stylesheet" href="/index.css" />
   </head>
   <body>
